# doodle-dojo

./: .gitignore  HACKATHON_WRITEUP.md  README.md  nixpacks.toml  start.sh
.github/: copilot-instructions.md
backend/: gemini_service.py  main.py  pyproject.toml  routes.py  schemas.py
backend/notebooks/: color-based-clustering.ipynb  stroke_extraction.ipynb
backend/routes/: routes.py
backend/schemas/: schemas.py
backend/services/: gemini_service.py  image_conversion_service.py  image_processing_service.py  stroke_extraction_service.py  stroke_instruction_helpers.py  test_layer_indexes.py  testing.ipynb
frontend/: package-lock.json  package.json
frontend/mock-data/: final-pikachu-co-ordinates.txt
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/session/: page.tsx
frontend/src/components/: MinWidthGuard.tsx
frontend/src/components/canvas/: DrawingCanvas.tsx
frontend/src/components/home/: EntryCard.tsx  Hero.tsx  HomeScreen.tsx
frontend/src/components/session/: ChatInput.tsx  CoachFeedback.tsx  ColorPicker.tsx  DrawingSession.tsx  MusicPlayer.tsx  ProgressBar.tsx  ReferencePanel.tsx  SessionHeader.tsx  (+3 more)
frontend/src/hooks/: useCoaching.ts  useGeminiLiveSession.ts  useLyriaSession.ts  useStrokeGuide.ts  useStrokeValidation.ts
frontend/src/lib/: canvasExport.ts  guideScaling.ts  lyriaPlayer.ts  mockGuideFrames.ts  mockStrokePlan.ts  pcm24Player.ts  pikachuRawStrokes.json  random_points.ts
frontend/src/stores/: canvasStore.ts  coachStore.ts  sessionStore.ts
frontend/src/types/: index.ts
(+12 files in other folders)
